[package]
name = "sliding_window_alt"
version = "0.1.0"
edition = "2021"
license = "Unlicense or MIT"
repository = "https://github.com/david-soto-m/sliding_window_alt"
categories = ["data-structures"]
keywords = ["Sliding window", "Control", "data-structures"]
description = "A structure that holds the last N items pushed to it."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

