[package]
name = "sliding_window_alt"
version = "0.1.2"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/david-soto-m/sliding_window_alt"
categories = ["data-structures"]
keywords = ["Sliding-window", "Control", "data-structures"]
description = "A structure that holds the last N items pushed to it."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"] }
circular-queue = "0.2.6"
sliding_window = "0.1.2"
queues = "1.1.0"

[[bench]]
name = "bench_1"
harness = false
